--- a/Movies/Movies/Base.lproj/Main.storyboard
+++ b/Movies/Movies/Base.lproj/Main.storyboard
@@ -32,6 +32,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Films" id="kCJ-A3-ESh">
                         <barButtonItem key="leftBarButtonItem" title="Exit" id="k1v-DF-L2B">
+                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <action selector="buttonExitAction:" destination="BYZ-38-t0r" id="TM6-mQ-a3o"/>
                             </connections>
@@ -58,22 +59,22 @@
                                 <rect key="frame" x="20" y="88" width="374" height="759"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z5j-uW-fjf">
-                                        <rect key="frame" x="146" y="0.0" width="82.5" height="42"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="35"/>
-                                        <nil key="textColor"/>
+                                        <rect key="frame" x="158.5" y="0.0" width="57" height="29"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                        <color key="textColor" red="0.93717288970000001" green="0.93730795379999998" blue="0.96066993469999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4bg-PK-id3">
-                                        <rect key="frame" x="67" y="67" width="240" height="278"/>
+                                        <rect key="frame" x="67" y="54" width="240" height="278"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="278" id="D15-7G-dwu"/>
                                         </constraints>
                                     </imageView>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Zxw-dc-idp">
-                                        <rect key="frame" x="0.0" y="370" width="374" height="389"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <rect key="frame" x="0.0" y="357" width="374" height="402"/>
+                                        <color key="backgroundColor" red="0.031361360099999999" green="0.050991125399999997" blue="0.1686013341" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                        <color key="textColor" systemColor="labelColor"/>
+                                        <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
@@ -85,7 +86,7 @@
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="7ke-ao-TGC"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.031361360099999999" green="0.050991125399999997" blue="0.1686013341" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="NJL-J3-9Up" firstAttribute="leading" secondItem="7ke-ao-TGC" secondAttribute="leading" constant="20" id="6l1-w8-Pcu"/>
                             <constraint firstItem="7ke-ao-TGC" firstAttribute="trailing" secondItem="NJL-J3-9Up" secondAttribute="trailing" constant="20" id="ald-iO-hL6"/>
@@ -95,6 +96,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Description" id="OP4-H3-P8c">
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="y9V-vr-d02">
+                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <action selector="buttonSaveAction:" destination="Q1P-YJ-6FG" id="d9o-pE-Qqw"/>
                             </connections>
@@ -120,7 +122,7 @@
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sHU-Et-fWC">
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" red="0.16467499729999999" green="0.20785969500000001" blue="0.29799818989999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="DoD-ea-pE7"/>
@@ -155,7 +157,7 @@
                                     <constraint firstAttribute="height" constant="54" id="2dE-dK-2D4"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="HiraMinProN-W3" family="Hiragino Mincho ProN" pointSize="49"/>
-                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="textColor" red="0.93717288970000001" green="0.93730795379999998" blue="0.96066993469999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="p2A-iu-6zA">
@@ -163,19 +165,25 @@
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="80w-b7-nfs">
                                         <rect key="frame" x="0.0" y="0.0" width="382" height="50"/>
+                                        <color key="backgroundColor" red="0.098024703559999996" green="0.10589437929999999" blue="0.2078126669" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="o2e-jG-OfH"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="0.0"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="done" textContentType="name"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EGU-B0-eXA">
                                         <rect key="frame" x="0.0" y="80" width="382" height="50"/>
+                                        <color key="backgroundColor" red="0.098024703559999996" green="0.10589437929999999" blue="0.2078126669" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" returnKeyType="done" textContentType="email"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VTo-O9-CqU">
                                         <rect key="frame" x="0.0" y="160" width="382" height="50"/>
+                                        <color key="backgroundColor" red="0.098024703559999996" green="0.10589437929999999" blue="0.2078126669" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" returnKeyType="done" secureTextEntry="YES" textContentType="password"/>
                                     </textField>
@@ -192,7 +200,9 @@
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TdI-R3-vlm">
                                         <rect key="frame" x="104.5" y="28.5" width="42" height="30"/>
-                                        <state key="normal" title="Log In"/>
+                                        <state key="normal" title="Log In">
+                                            <color key="titleColor" red="0.93717288970000001" green="0.93730795379999998" blue="0.96066993469999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
                                         <connections>
                                             <action selector="buttonLoginAction:" destination="FHW-ej-yYV" eventType="touchUpInside" id="IDL-YG-BWv"/>
                                         </connections>
@@ -201,7 +211,7 @@
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="fWB-qv-r5G"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.031361360099999999" green="0.050991125399999997" blue="0.1686013341" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="p2A-iu-6zA" firstAttribute="leading" secondItem="fWB-qv-r5G" secondAttribute="leading" constant="16" id="3y7-m9-gPc"/>
                             <constraint firstItem="oHo-lC-BYj" firstAttribute="top" secondItem="p2A-iu-6zA" secondAttribute="bottom" constant="30" id="DLt-C1-hE2"/>
@@ -229,11 +239,14 @@
         <scene sceneID="2Kp-Kr-o0M">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Ps6-ZZ-Rho" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Films" image="film.fill" catalog="system" id="inm-84-Kl9"/>
+                    <tabBarItem key="tabBarItem" title="Films" image="film.fill" catalog="system" id="inm-84-Kl9">
+                        <color key="badgeColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBarItem>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="zeR-LK-POe">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.64707273239999996" green="0.1647173166" blue="0.16470932960000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -251,7 +264,8 @@
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="uAZ-rF-Hfs">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" red="0.031362503770000001" green="0.047069177029999999" blue="0.16075912119999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
                     <connections>
                         <segue destination="Ps6-ZZ-Rho" kind="relationship" relationship="viewControllers" id="HQn-al-uu2"/>
@@ -266,11 +280,14 @@
         <scene sceneID="nFf-3t-zEL">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="q1I-D3-lzQ" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Favorites" image="sparkles" catalog="system" id="YB3-d7-Aq4"/>
+                    <tabBarItem key="tabBarItem" title="Favorites" image="sparkles" catalog="system" id="YB3-d7-Aq4">
+                        <color key="badgeColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBarItem>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="MT5-sf-2pi">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.64707273239999996" green="0.1647173166" blue="0.16470932960000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -285,9 +302,6 @@
     <resources>
         <image name="film.fill" catalog="system" width="128" height="93"/>
         <image name="sparkles" catalog="system" width="112" height="128"/>
-        <systemColor name="labelColor">
-            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
