--- a/Movies/Movies/View/Xib files/FavoriteCell.xib
+++ b/Movies/Movies/View/Xib files/FavoriteCell.xib
@@ -16,34 +16,35 @@
                 <rect key="frame" x="0.0" y="0.0" width="379" height="103"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cGV-dJ-8Nu">
-                        <rect key="frame" x="20" y="6.5" width="90" height="90"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cGV-dJ-8Nu">
+                        <rect key="frame" x="10" y="10" width="83" height="83"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="90" id="JGu-tl-hAs"/>
+                            <constraint firstAttribute="width" secondItem="cGV-dJ-8Nu" secondAttribute="height" multiplier="1:1" id="ykS-JJ-baL"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OIU-nw-gra">
-                        <rect key="frame" x="120" y="10" width="239" height="21"/>
+                        <rect key="frame" x="103" y="10" width="256" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" red="0.84698432680000002" green="0.84710663559999999" blue="0.84695750469999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eh4-oF-CU7">
-                        <rect key="frame" x="120" y="39" width="239" height="58"/>
+                        <rect key="frame" x="103" y="39" width="256" height="58"/>
                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" red="0.84698432680000002" green="0.84710663559999999" blue="0.84695750469999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <color key="backgroundColor" red="0.031361360099999999" green="0.050991125399999997" blue="0.1686013341" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
-                    <constraint firstItem="cGV-dJ-8Nu" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="6.5" id="2Bo-iM-DzU"/>
                     <constraint firstItem="OIU-nw-gra" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="9tD-Pl-dUr"/>
-                    <constraint firstItem="cGV-dJ-8Nu" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Cks-yb-XFI"/>
-                    <constraint firstItem="Eh4-oF-CU7" firstAttribute="leading" secondItem="cGV-dJ-8Nu" secondAttribute="trailing" constant="10" id="JVl-6b-5x4"/>
+                    <constraint firstItem="OIU-nw-gra" firstAttribute="leading" secondItem="cGV-dJ-8Nu" secondAttribute="trailing" constant="10" id="EZw-4E-9LX"/>
                     <constraint firstAttribute="bottom" secondItem="Eh4-oF-CU7" secondAttribute="bottom" constant="6" id="Ze6-SZ-o3e"/>
                     <constraint firstAttribute="trailing" secondItem="OIU-nw-gra" secondAttribute="trailing" constant="20" symbolic="YES" id="ZsS-Al-tdv"/>
-                    <constraint firstItem="cGV-dJ-8Nu" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" symbolic="YES" id="emY-7q-ebn"/>
-                    <constraint firstItem="OIU-nw-gra" firstAttribute="leading" secondItem="cGV-dJ-8Nu" secondAttribute="trailing" constant="10" id="wXn-BG-ZCK"/>
+                    <constraint firstAttribute="bottom" secondItem="cGV-dJ-8Nu" secondAttribute="bottom" constant="10" id="kot-BL-EmZ"/>
+                    <constraint firstItem="cGV-dJ-8Nu" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="tQ7-x0-T7N"/>
+                    <constraint firstItem="Eh4-oF-CU7" firstAttribute="leading" secondItem="cGV-dJ-8Nu" secondAttribute="trailing" constant="10" id="vw8-pJ-Cp9"/>
+                    <constraint firstItem="cGV-dJ-8Nu" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="w3z-Tg-bAD"/>
                     <constraint firstAttribute="trailing" secondItem="Eh4-oF-CU7" secondAttribute="trailing" constant="20" symbolic="YES" id="woC-x7-73t"/>
                     <constraint firstItem="Eh4-oF-CU7" firstAttribute="top" secondItem="OIU-nw-gra" secondAttribute="bottom" constant="8" symbolic="YES" id="yVI-ME-wzX"/>
                 </constraints>
